7월28일산기연논문실험

--- a/ReuterDeep2_Batch_Dropout.ipynb
+++ b/ReuterDeep2_Batch_Dropout.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "케라스 데이터셋 로이터 데이터의 CNN 딥러닝테스트"
+    "케라스 데이터셋 로이터 데이터의 일반적 딥러닝테스트 (더 깊게 테스트) ReuterDeep1.ipynb 에서 ReuterDeep2.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "(8982, 2246)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,27 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/15\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "in user code:\n\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 1051, in train_function  *\n        return step_function(self, iterator)\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 1040, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 1030, in run_step  **\n        outputs = model.train_step(data)\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 889, in train_step\n        y_pred = self(x, training=True)\n    File \"c:\\Python39\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\input_spec.py\", line 228, in assert_input_compatibility\n        raise ValueError(f'Input {input_index} of layer \"{layer_name}\" '\n\n    ValueError: Exception encountered when calling layer \"sequential_3\" (type Sequential).\n    \n    Input 0 of layer \"conv1d_3\" is incompatible with the layer: expected min_ndim=3, found ndim=2. Full shape received: (None, 64)\n    \n    Call arguments received by layer \"sequential_3\" (type Sequential):\n      • inputs=tf.Tensor(shape=(None, 10000), dtype=float32)\n      • training=True\n      • mask=None\n",
+     "ename": "NameError",
+     "evalue": "name 'Dropout' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Text_Mining2022\\ReuterDeepCNN1.ipynb 셀 5\u001b[0m in \u001b[0;36m<cell line: 26>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeepCNN1.ipynb#ch0000004?line=22'>23</a>\u001b[0m partial_y_train\u001b[39m=\u001b[39mone_hot_train_labels[\u001b[39m1000\u001b[39m:]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeepCNN1.ipynb#ch0000004?line=24'>25</a>\u001b[0m \u001b[39m#CNN_history = CNN.fit(x_train, y_train, epochs=15, batch_size=128, validation_data=(x_test, y_test))\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeepCNN1.ipynb#ch0000004?line=25'>26</a>\u001b[0m history\u001b[39m=\u001b[39mSCNN\u001b[39m.\u001b[39;49mfit(partial_x_train, partial_y_train, epochs\u001b[39m=\u001b[39;49m\u001b[39m15\u001b[39;49m, batch_size\u001b[39m=\u001b[39;49m\u001b[39m512\u001b[39;49m, validation_data\u001b[39m=\u001b[39;49m(x_val, y_val))\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\keras\\utils\\traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[0;32m     66\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m---> 67\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     68\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_fileolc4v0d8.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__train_function\u001b[1;34m(iterator)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m     retval_ \u001b[39m=\u001b[39m ag__\u001b[39m.\u001b[39mconverted_call(ag__\u001b[39m.\u001b[39mld(step_function), (ag__\u001b[39m.\u001b[39mld(\u001b[39mself\u001b[39m), ag__\u001b[39m.\u001b[39mld(iterator)), \u001b[39mNone\u001b[39;00m, fscope)\n\u001b[0;32m     16\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: in user code:\n\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 1051, in train_function  *\n        return step_function(self, iterator)\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 1040, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 1030, in run_step  **\n        outputs = model.train_step(data)\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\training.py\", line 889, in train_step\n        y_pred = self(x, training=True)\n    File \"c:\\Python39\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"c:\\Python39\\lib\\site-packages\\keras\\engine\\input_spec.py\", line 228, in assert_input_compatibility\n        raise ValueError(f'Input {input_index} of layer \"{layer_name}\" '\n\n    ValueError: Exception encountered when calling layer \"sequential_3\" (type Sequential).\n    \n    Input 0 of layer \"conv1d_3\" is incompatible with the layer: expected min_ndim=3, found ndim=2. Full shape received: (None, 64)\n    \n    Call arguments received by layer \"sequential_3\" (type Sequential):\n      • inputs=tf.Tensor(shape=(None, 10000), dtype=float32)\n      • training=True\n      • mask=None\n"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Text_Mining2022\\ReuterDeep2_Batch_Dropout.ipynb 셀 5\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeep2_Batch_Dropout.ipynb#ch0000004?line=4'>5</a>\u001b[0m model\u001b[39m.\u001b[39madd(layers\u001b[39m.\u001b[39mDense(\u001b[39m64\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m, input_shape\u001b[39m=\u001b[39m(\u001b[39m10000\u001b[39m,)))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeep2_Batch_Dropout.ipynb#ch0000004?line=5'>6</a>\u001b[0m model\u001b[39m.\u001b[39madd(layers\u001b[39m.\u001b[39mDense(\u001b[39m64\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeep2_Batch_Dropout.ipynb#ch0000004?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39madd(Dropout())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeep2_Batch_Dropout.ipynb#ch0000004?line=7'>8</a>\u001b[0m model\u001b[39m.\u001b[39madd(layers\u001b[39m.\u001b[39mDense(\u001b[39m64\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Text_Mining2022/ReuterDeep2_Batch_Dropout.ipynb#ch0000004?line=8'>9</a>\u001b[0m model\u001b[39m.\u001b[39madd(layers\u001b[39m.\u001b[39mDense(\u001b[39m64\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Dropout' is not defined"
      ]
     }
    ],
@@ -114,20 +105,15 @@
     "from keras import models\n",
     "from keras import layers\n",
     "\n",
-    "import tensorflow\n",
-    "from keras.models import Sequential\n",
+    "model=models.Sequential()\n",
+    "model.add(layers.Dense(64, activation='relu', input_shape=(10000,)))\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(46, activation='softmax'))\n",
     "\n",
-    "\n",
-    "SCNN=models.Sequential()\n",
-    "#SCNN.add(layers.Embedding(input_dim=30000, output_dim=1024, input_length=500))\n",
-    "SCNN.add(layers.Dense(64, activation='relu'))\n",
-    "SCNN.add(layers.Conv1D(256, 3, padding='valid', activation='relu'))\n",
-    "SCNN.add(layers.GlobalMaxPooling1D())\n",
-    "SCNN.add(layers.Dense(64, activation='relu'))\n",
-    "SCNN.add(layers.Dense(46, activation='softmax'))\n",
-    "\n",
-    "\n",
-    "SCNN.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "x_val=x_train[:1000]\n",
     "partial_x_train=x_train[1000:]\n",
@@ -135,13 +121,12 @@
     "y_val=one_hot_train_labels[:1000]\n",
     "partial_y_train=one_hot_train_labels[1000:]\n",
     "\n",
-    "#CNN_history = CNN.fit(x_train, y_train, epochs=15, batch_size=128, validation_data=(x_test, y_test))\n",
-    "history=SCNN.fit(partial_x_train, partial_y_train, epochs=15, batch_size=512, validation_data=(x_val, y_val))"
+    "history=model.fit(partial_x_train, partial_y_train, epochs=15, batch_size=512, validation_data=(x_val, y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
